--- a/1_introduction/introduction.tex
+++ b/1_introduction/introduction.tex
@@ -4,7 +4,7 @@ Um sistema de controle digital consiste de sensores, sistema controlado, algorit
 O desenvolvimento de controladores digitais é uma tarefa fundamental na engenharia de controle, uma vez que eles são rotineiramente usados para muitas aplicações diferentes, que vão desde a indústria até noramo aeroespacial~\cite{simons1994levers}.
 
 A teoria de controle digital visa preservar algumas propriedades baseadas em modelos de tempo discreto, por exemplo, estabilidade e robustez, que são necessárias para a operação correta de plantas reais através de um controlador digital. Controlar sistemas contínuos usando controladores digitais levanta problemas típicos de sistemas híbridos.
-Além disso, arredondamento e quantização de amostras e coeficientes em controladores digitais, devido a implementações de comprimento de palavras finitas (FWL), podem levar a \textit{overflow}, oscilação de ciclo limite e sensibilidade a pólos e zeros, o que pode causar instabilidade do sistema e degradação do desempenho. ~\cite{istepanian2012digital,BessaICF16,bessa2017formal}. De fato, esse tipo de sensibilidade é chamado de fragilidade~\cite{keel1997robust} e é importante para o projeto de sistemas de controle, uma vez que está diretamente relacionado à sua robustez. Na literatura, existem alguns estudos relacionados que consideram perturbações nas implementações de sistemas de controle; Yordanov et al. \cite{yordanov2012temporal} considera pequenas perturbações nas entradas aplicadas em um sistema dinâmico para a síntese de uma estratégia de controle de realimentação para um sistema de afinidade por partes (PWA) em tempo discreto a partir de uma especificação dada como uma fórmula de lógica linear temporal (LTL) sobre um conjunto de predicados lineares nas variáveis de estado do sistema.
+Além disso, arredondamento e quantização de amostras e coeficientes em controladores digitais, devido a implementações de comprimento de palavras finitas (\textit{finite word length} - FWL), podem levar a \textit{overflow}, oscilação de ciclo limite e sensibilidade a pólos e zeros, o que pode causar instabilidade do sistema e degradação do desempenho. ~\cite{istepanian2012digital,BessaICF16,bessa2017formal}. De fato, esse tipo de sensibilidade é chamado de fragilidade~\cite{keel1997robust} e é importante para o projeto de sistemas de controle, uma vez que está diretamente relacionado à sua robustez. Na literatura, existem alguns estudos relacionados que consideram perturbações nas implementações de sistemas de controle; Yordanov et al. \cite{yordanov2012temporal} considera pequenas perturbações nas entradas aplicadas em um sistema dinâmico para a síntese de uma estratégia de controle de realimentação para um sistema de afinidade por partes (PWA) em tempo discreto a partir de uma especificação dada como uma fórmula de lógica linear temporal (LTL) sobre um conjunto de predicados lineares nas variáveis de estado do sistema.
 
 Algumas iniciativas que utilizam a verificação formal aplicada a sistemas de controle dinâmicos foram desenvolvidas nos últimos anos. Por exemplo, Bessa et al. \cite{bessa2017formal} apresentam um método de verificação para determinar a estabilidade incerta do sistema linear em relação aos controladores digitais, levando em conta aspectos de implementação, enquanto Wang et al., ampliam as técnicas tradicionais de verificação para implementação de controladores digitais, com o objetivo de abordar a validação da robustez no modelo e no nível de código. Abreu et al. \cite{abreu2016bounded} desenvolvem um método para verificar filtros digitais relativos a \textit{overflow} e ruído indesejado, que são causados por efeitos de quantização e arredondamento, e Belta~\cite{belta2014formal} verificaram a estabilidade em sistemas dinâmicos. Além disso, Racchetti et al.\cite{racchetti2015verification} geraram sequências de teste a partir de diagramas temporais de especificações de software e as executaram em tempo real, verificou-se parte de sua conformidade, salvou-se contornos de teste e analisou-os automaticamente através de um método de verificação.
 Nilsson et al.~\cite{nilsson2016correct} aplicam métodos formais de controle de cruzeiro adaptativo e executa síntese de controlador que é correta por construção.
