--- a/3_related_work/related-work.tex
+++ b/3_related_work/related-work.tex
@@ -26,11 +26,11 @@ A abordagem apresentada para a construção da abstração garante que uma estratégi
 
 Sadraddini and Belta~\cite{sadraddini2017formal} desenvolveram um método para controlar sistemas de tempo discreto com parâmetros constantes mas inicialmente desconhecidos a partir de especificações de lógica temporal linear (LTL).Os autores usam as noções de sistemas de transição paramétricos e adaptativos (não-determinísticos) e ferramentas de métodos formais para computar estratégias de controle adaptativo para sistemas finitos. 
 
-Apesar de não utilizar os métodos tradicionais de controle adaptativo, usando uma abordagem correta por construção a qual não requer um modelo de referência e pode lidar com uma gama muito maior de sistemas e especificações, não leva em consideração aspectos relativos a depensempenho de sistemas considerando a resposta ao degrau, bem como deixa de lado aspectos enfrentados com a implementação, como os efeitos de fwl. Como a maioria das outras aplicações de métodos formais, os resultados sofrem pela alta complexidade computacional. Como discutido no artigo, o número de estados no sistema de transição adaptativa (ATS) pode ser muito grande. Além disso, a construção de quocientes finitos para sistemas infinitos é computacionalmente difícil.
+Apesar de não utilizar os métodos tradicionais de controle adaptativo, usando uma abordagem correta por construção a qual não requer um modelo de referência e pode lidar com uma gama muito maior de sistemas e especificações, não leva em consideração aspectos relativos a depensempenho de sistemas considerando a resposta ao degrau, bem como deixa de lado aspectos enfrentados com a implementação, como os efeitos de FWL. Como a maioria das outras aplicações de métodos formais, os resultados sofrem pela alta complexidade computacional. Como discutido no artigo, o número de estados no sistema de transição adaptativa (ATS) pode ser muito grande. Além disso, a construção de quocientes finitos para sistemas infinitos é computacionalmente difícil.
 
 \section{\textit{Correct-by-construction Adaptive Cruise Control: Two Approaches}}\label{sec:related-work-5}
 
-Nilsosn {\it et al.}~\cite{nilsson2016correct} descrevem duas abordagens para sintetizar controladores correto por construção em istemas de controle de cruzeiro adaptativo. Ambas as abordagens baseiam-se na computação em pontos fixos no domínio do controlador, a partir da qual a especi?cação em lógica linear temporal (LTL) pode ser aplicada. Uma calcula tais pontos fixos diretamente no espaço de estados contínuo, a outra em uma abstração de estados finitos da dinâmica não-linear.
+Nilsosn {\it et al.}~\cite{nilsson2016correct} descrevem duas abordagens para sintetizar controladores correto por construção em sistemas de controle de cruzeiro adaptativo. Ambas as abordagens baseiam-se na computação em pontos fixos no domínio do controlador, a partir da qual a especificação em lógica linear temporal (LTL) pode ser aplicada. Uma calcula tais pontos fixos diretamente no espaço de estados contínuo, a outra em uma abstração de estados finitos da dinâmica não-linear.
 
 De acordo com os resultados experimentais, este trabalho se mostra eficaz para sistemas de controle de cruzeiro adaptativo. Porém, leva em consideração a síntese de controladores estáveis considerando a propriedade de \textit{safety}, mas n'ao aborda questões de projeto de controladores referentes a desempenho a resposta ao degrau.
 
@@ -38,35 +38,38 @@ De acordo com os resultados experimentais, este trabalho se mostra eficaz para s
 
 Gross {\it et al.}~\cite{gross2017formal} propuseram uma abordagem para formalizar requisitos comuns de sistema de controle de atitude de naves espaciais, como limites do atuador, erro de indicação, alcançabilidade, desvio, tempo de assentamento, tempo de subida e sobressinal. Os autores utlizaram métodos formais, mais especificamente verificação de modelos e teste de hipótese para verificar requisitos de desempenho de sistemas de controle de atitude de naves espaciais. O trabalho em questão avalia esses sistemas e verifica se obedecem a esses requisitos no domínio do tempo contínuo. Embora a intenção inicial de formalizar os requisitos fosse conduzir análises formais de métodos para determinar se o projeto de controle de atitude de naves espaciais atendia aos requisitos do sistema, as equações de movimentos não-lineares se mostraram muito complexas para os solucionadores e apenas alguns requisitos puderam ser analisados.
 
-Um ponto positivo desse trabalho foi que consideraram aspectos de desempenho na verificação de controladores. Apesar disso, os autores não trabalharam com sistemas em tempo discreto, não levando em consideração aspectos de implementação, como os efeitos fwl.
+Um ponto positivo desse trabalho foi que consideraram aspectos de desempenho na verificação de controladores. Apesar disso, os autores não trabalharam com sistemas em tempo discreto, não levando em consideração aspectos de implementação, como os efeitos FWL.
 
-\section{\textit{Formal Synthesis of Analytic Controllers for Sampled-Data Systems via Genetic Programming.}}\label{sec:related-work-7}
+\section{\textit{Robust Controller Synthesis of Switched Systems Using Counterexample Guided Framework}}\label{sec:related-work-7}
 
-Park {\it et al.}~\cite{Park:2014} apresentam um método de localização de falhas dinâmico para localizar as raízes da causa de defeitos de concorrência e a implementação de um protótipo da técnica, chamado \textsc{Falcon}. Usando detecção dinâmica de padrões e localização de falhas estatística, o \textsc{Falcon} é capaz de mostrar a existência de defeitos em programas concorrentes, tanto de atomicidade quanto violação de ordem, auxiliando desenvolvedores a corrigir falhas em códigos. A técnica utiliza dados providos por casos de teste para o programa em verificação e tenta encontrar padrões pré-estabelecidos de acesso à memória compartilhada. Tais padrões são organizados estatisticamente de forma a priorizar quais as possíveis falhas existentes no programa.
+Ravanbakhsh and Sankaranarayanan~\cite{ravanbakhsh2016robust} investigam o problema de sintetizar controladores robustos que asseguram que o sistema em malha fechada satisfaça uma especificação de \textit{reach-while-stay} de entrada, em que todas as trajetórias partindo de um conjunto inicial $I$, eventualmente atingem um conjunto de metas especificadas $G$, enquanto permanecem dentro de um conjunto seguro $S$. A ideia chave é: dado o modelo da planta que consiste em um sistema comutado de tempo contínuo controlado por um sinal de comutação externo e entradas de perturbação da planta, o controlador usa uma lei de realimentação de estado para controlar o sinal de comutação, a fim de garantir que as propriedades de correção desejadas sejam mantidas, independentemente das ações de perturbação. Para garantir a especificação de \textit{reach-while-stay}, a abordagem usa um certificado de prova na forma de uma função robusta de controle Lyapunov (\textit{robust control Lyapunov-like function} - RCLF). Para encontrar um RCLF, usa-se uma estrutura de síntese indutiva guiada por contra-exemplo (CEGIS), resolvendo iterativamente uma fórmula $\exists \forall \exists \forall$ usando solucionadores SMT livres de quantificação. Finalmente, utilizaram o problema de traduzir o RCLF sintetizado pela abordagem em uma implementação de controle.
 
-De acordo com o estudo empírico realizado pelos autores, a técnica aparentou ser eficaz para tratar violações de atomicidade e ordem em programa concorrentes, mostrando-se eficiente em termos de espaço e tempo utilizado. No entanto, essa abordagem foi desenvolvida apenas para lidar com programas Java, depende de casos de teste para a procura por padrões defeituosos e, no trabalho em questão, os autores apenas avaliaram a ferramenta com uma entrada de teste e múltiplas execuções do programa.
+A técnica de síntese de controladores para sistemas de controle comutados apresentada aparesentou bons resultados pelo que se propos a fazer, considerando sistemas de controle em tempo contínuo. Porém, deixou de considerar aspectos de implementação desses controladores do mundo real, onde necessita-se trabalhar com sistemas em tempo discreto, e levar em conta aspectos de implementação, como efeitos de FWL. O problema de sintetizar controladores para satisfazer requisitos da propriedade \textit{reach-while-stay} tem sua importância, mas outros aspectos como estabilidade e requisitos de desempenham devem ser considerados em projeto de controladores para problemas do mundo real.
 
-\section{\textit{Cause Clue Clauses: Error Localization using Maximum Satisfiability}}\label{sec:related-work-8}
+\section{\textit{Multi-objective design of state feedback controllers using reinforced quantum-behaved particle swarm optimization}}\label{sec:related-work-8}
 
-Jose {\it et al.}~\cite{Jose:2011} discutem sobre um algoritmo para localização de causas de erro, considerando uma redução para o {\it problema da satisfiabilidade máxima} (MAX-SAT), que aponta o número máximo de cláusulas de uma fórmula booleana que uma atribuição pode satisfazer simultaneamente. A ideia chave é combinar uma fórmula de rastreamento booleana e uma fórmula não-satisfatível, ambas em relação ao desdobramento do programa e uma execução do programa malsucedida, e usar MAX-SAT para encontrar o conjunto máximo de cláusulas que podem ser satisfeitas ao mesmo tempo nessa fórmula. O complemento desse conjunto devolvido pelo solucionador MAX-SAT contém os locais do programa que levam ao erro, logo, corrigindo esses locais, é possível conseguir uma execução sem falhas do programa para o caso de teste dado. Vale ressaltar que o uso de MAX-SAT também foi abordado por Trindade {\it et al.}~\cite{Trindade:2016} no ESBMC para avaliar o problema de particionamento de hardware-software.
+Hassani and Lee~\cite{hassani2016multi} apresentam um paradigma de projeto genérico multi-objetivo que utiliza otimização de enxame de particulas (\textit{particle swarm optimization} - PSO) com comportamento quântico (QPSO) para decidir a configuração ideal do controlador LQR para um determinado problema, considerando um conjunto de objetivos concorrentes. Existem três contribuições principais introduzidas nesse trabalho da seguinte forma: o algoritmo QPSO padrão é reforçado com um esquema de inicialização informado baseado no algoritmo de recozimento simulado e no mecanismo de seleção de vizinhança gaussiana, ele também é aumentado com uma estratégia de busca local que integra as vantagens do algoritmo memético no QPSO convencional, e também é introduzido um critério agregado de ponderação dinâmica que combina dinamicamente as restrições \textit{soft} e \textit{hard} com os objetivos de controle para fornecer ao projetista um conjunto de soluções ótimas de Pareto e permite que ela decida a solução de destino com base nas preferências práticas.
 
-O algoritmo apresentado é capaz de localizar linhas defeituosas e os autores também realizaram experimentos para sugerir reparos de atribuições aritméticas e troca de operadores de comparação no código original. Apesar dessa abordagem ser útil para localizar linhas defeituosas, ela ainda depende de uma execução malsucedida, e funciona apenas para para programas ANSI-C padrão.
+O trabalho em questão se mostra bastante promissor, visto que faz uma certa análise a aspectos de desempenho de sistemas de controle. Apesar disso, a análise toda é feita considerando controladores em tempo contínuo. Apenas é feito uma ``melhoria`` nos parâmetros de desempenho do sistemas, mas não sintetiza controladores com base nesses parâmetros como requisitos necessários e específicos. Como não trabalha diretamente com sistemas de controle digital, consequentemente não leva em conta aspectos de implementação dos mesmo em microprocessadores, podendo gerar controladores que quando implementados nessas plataformas não se comporte conforme projetado, visto que podem sofrer com os efeitos de FWL, por exemplo.
 
-\section{\textit{Automated Formal Synthesis of Digital Controllers for State-Space Physical Plants}}
 
-Hong {\it et al.}~\cite{abate2017automated} propõem uma abordagem sólida e automatizada para sintetizar controladores digitais com realimentação seguros para plantas físicas representadas como modelos lineares invariantes no tempo. Os autores utilizaram síntese indutiva guiada por contra-exemplo (CEGIS) o qual possui duas fases: síntese de um controlador de realimentação estático que estabiliza o sistema, mas que pode não ser seguro para todas as condições iniciais. A segurança é então verificada via verificação de modelos limitada (BMC, do inglês \textit{bounded model checking}) ou aceleração abstrata; se a etapa de verificação falhar, um contra-exemplo é fornecido ao mecanismo de síntese e o processo itera até que um controlador seguro seja obtido.
+\section{\textit{Formal Synthesis of Analytic Controllers for Sampled-Data Systems via Genetic Programming}}\label{sec:related-work-9}
 
-O trabalho em questão apresenta excelentes resultados, porém ainda deixa de considerar aspectos desempenho de projeto de controladores, considerando somente a estabilidade dos mesmos. Um bom aspecto é que a metodologia considera fragilidade na implementação dos controladores digitais.
+Verdier {\it et al.}~\cite{verdier2018formal} apresentam um método automático de síntese de controladores para sistemas de amostragem de dados não-lineares com especificações de segurança e alcançabilidade. Basicamente, a estratégia apresentada não se limita aos sistemas polinomiais e controladores. Considera-se ocasionalmente controladores comutados baseados em funções de barreira de controle Lyapunov. A estratégia proposta utiliza programação genética para sintetizar essas funções, bem como os modos do controlador. A exatidão do controlador é verificada por meio de um solucionador de hipótese de módulo de satisfiabilidade.
 
-\section{\textit{Metallaxis-FL: Mutation-Based Fault Localization}}
+De acordo com o estudo apresentado, a metodologia utlizada apresentou bons resultados, considerando o que os autores se propuseram a fazer. Apesar disso, testaram apenas em sistemas até terceira ordem. Além do mais, trabalharam apenas com sistemas contínuos considerando somente estabilidade do sistemas e desconsiderando aspectos de implementação em sistemas microprocessados, como os efeitos de FWL.
 
-Papadakis {\it et al.}~\cite{Papadakis:2015} apresentam uma abordagem de localização de falhas baseadas em análise de mutação, chamada \textit{Metallaxis}. A abordagem consiste em usar mutantes e associá-los com potenciais locais defeituosos do programa, e quando mutantes são mortos (principalment por casos de testes que falham), tais são essencialmente bons indicadores sobre os locais defeituosos de um programa.  Ainda mais, a abordagem apresentada usa em seu favor um número alto de casos de teste para ordenar instruções mutadas, com relação à sua pontuação de suspeita, o qual leva a falhas no programa. De acordo com dados experimentais, \textit{Metallaxis} é substancialmente mais efetivo que abordagens baseadas em instruções, até quando técnicas de redução de custo de mutação (\textit{e.g.}, amostragem de mutação) são usada. \textit{Metallaxis} localiza falhas efetivamente e, visto que ele funciona sobre uma suíte de teste, ele só pode ser usado durante o teste para localizar potenciais falhas.
 
-A abordagem se mostra superior a abordagens baseadas em instruções; no entanto, ela ainda deende de uma extensa suíte de teste e só foi avaliada em software ANSI-C procedural/sequencial.
+\section{\textit{Automated Formal Synthesis of Digital Controllers for State-Space Physical Plants}}\label{sec:related-work-10}
+
+Abate {\it et al.}~\cite{abate2017automated} propõem uma abordagem sólida e automatizada para sintetizar controladores digitais com realimentação seguros para plantas físicas representadas como modelos lineares invariantes no tempo. Os autores utilizaram síntese indutiva guiada por contra-exemplo (CEGIS) o qual possui duas fases: síntese de um controlador de realimentação estático que estabiliza o sistema, mas que pode não ser seguro para todas as condições iniciais. A segurança é então verificada via verificação de modelos limitada (\textit{bounded model checking} - BMC) ou aceleração abstrata; se a etapa de verificação falhar, um contra-exemplo é fornecido ao mecanismo de síntese e o processo itera até que um controlador seguro seja obtido.
+
+O trabalho em questão apresenta excelentes resultados, porém ainda deixa de considerar aspectos de desempenho de projeto de controladores, considerando somente a estabilidade dos mesmos. Um bom aspecto é que a metodologia considera fragilidade na implementação dos controladores digitais.
+
 
 \section{Comparação entre os Trabalhos}
 
-Os trabalhos relacionados tratam ou de localização de falhas em programas ou em verificação de programas concorrentes. Foi possível observar que o problema de localização de falhas é pertinente, visto que este processo toma muito tempo dos desenvolvedores no ciclo de desenvolvimento de software. O tratamento de programas concorrentes também foi observado como um problema complexo de ser tratado devido ao grande número de possibilidades nas tentativas de simular um comportamento defeituoso. Tendo esses pontos em mente, as principais diferenças entre a abordagem proposta nesse trabalho para as aqui discutidas podem ser listadas: o método proposto requer apenas o código-fonte do programa, em contraste com outros métodos, onde mais dados são necessários, como uma execução malsucedida; o método proposto funciona para programas concorrentes em C, amplamente usados em sistemas embarcados; e, finalmente, é possível apontar linhas defeituosas facilmente, enquanto que outras abordagens verificam a segurança de um programa. A Tabela~\ref{table:related-work-comparison} mostra um quadro comparativo entre o método proposto nesta dissertação e os trabalhos relacionados selecionados.
+Os trabalhos relacionados tratam de verificação de sistemas de controle que é uma das fases deste trabalho, e síntese de controladores de sistemas de controle. Pode-se notar a respeito dos trabalhos analisados que o problema de síntese de controladores digitais é pertinente, visto que este processo é bastante necessário na fase de projeto de um controlador digital. A síntese de controladores digitais para sistemas de controle foi observado como um problema complexo e de difícil uma grande abrangênciade problemas devido a muitos trabalhos abordarem o problema de diferentes maneiras e levando em consideração fatores diferentes. Sabendo disso, as principais diferenças entre a abordagem proposta nesse trabalho para as aqui discutidas podem ser listadas: trabalha com sistemas de controle em tempo discreto o qual é o que efetivamente é usado quando implementamos utilizando uma plataforma microprocesada; a metodologia proposta sintetiza e verifica controladores considerando requisitos de desempenho de sistemas de controle; e, finalmente, consideramos aspectos de implementação que podemn ocasionar mal funcionamento dos sistemas de controle, visto que os efeitos de FWL, por exemplo, podem levar a isso. A Tabela~\ref{table:related-work-comparison} mostra um quadro comparativo entre a metodologia proposto nesta dissertação e os trabalhos relacionados selecionados.
 
 \begin{table}[ht]
     \renewcommand{\arraystretch}{1.0}
@@ -74,20 +77,20 @@ Os trabalhos relacionados tratam ou de localização de falhas em programas ou em 
     \label{table:related-work-comparison}
     \centering
     \begin{tabular}{c|c|c|c|c}
-        \hline \shortstack{\bfseries Trabalhos} & \bfseries Localiza & \bfseries Aplicável em & \bfseries Verifica & \bfseries Necessita\\
-\bfseries relacionados & \bfseries falhas & \bfseries programas & \bfseries código & \bfseries de casos\\
-\bfseries & & \bfseries concorrentes & \bfseries C & \bfseries de teste\\
-        \hline Jones {\it et al.} (2009) & X & & X & X\\
-        \hline Cleve {\it et al.} (2005) & X & & X & X\\
-        \hline Birch {\it et al.} (2015) & X & & X & X\\
-        \hline Tomasco {\it et al.} (2015) & & X & X &\\
-        \hline Cordeiro {\it et al.} (2011) & & X & X &\\
-        \hline Griesmayer {\it et al.} (2007) & X & & X &\\
-        \hline Park {\it et al.} (2014) & X & X & &\\
-        \hline Jose {\it et al.} (2011) & X & & X &\\
-        \hline Hong {\it et al.} (2015) & X & & X & X\\
-        \hline Papadakis {\it et al.} (2015) & X & & X & X\\
-        \hline Método proposto & X & X & X &\\
+        \hline \shortstack{\bfseries Trabalhos} & \bfseries Suporte a & \bfseries Suporte a & \bfseries Considera os & \bfseries Síntese e\\
+\bfseries relacionados & \bfseries sistemas & \bfseries requisitos de & \bfseries efeitos & \bfseries de casos\\
+\bfseries & \bfseries discretos & \bfseries desempenho & \bfseries de FWL & \bfseries Verificação\\
+        \hline Bessa {\it et al.} (2017) & X & & X & \\
+        \hline Wang {\it et al.} (2016) & X & & & \\
+        \hline Yordanov {\it et al.} (2012) & X & & & \\
+        \hline Sadraddini and Belta (2017) & X & & & \\
+        \hline Nilsosn {\it et al.} (2016) & X & & X & \\
+        \hline Gross {\it et al.} (2017) & & X & & \\
+        \hline Ravanbakhsh and Sankaranarayanan (2016) & & & & X\\
+        \hline Hassani and Lee (2016) & & X & & \\
+        \hline Verdier {\it et al.} (2018) & & & & \\
+        \hline Abate {\it et al.} (2017) & X & & X & X\\
+        \hline Metodologia proposta & X & X & X & X\\
 	\end{tabular}
 \end{table}
 
