--- a/references/references.bib
+++ b/references/references.bib
@@ -1252,3 +1252,28 @@ title  = {Z310: {A}pplications, {E}nablers, {C}hallenges and {D}irections}
   year={2017},
   organization={Springer}
 }
+@article{hassani2016multi,
+  title={Multi-objective design of state feedback controllers using reinforced quantum-behaved particle swarm optimization},
+  author={Hassani, Kaveh and Lee, Won-Sook},
+  journal={Applied Soft Computing},
+  volume={41},
+  pages={66--76},
+  year={2016},
+  publisher={Elsevier}
+}
+@inproceedings{verdier2018formal,
+  title={Formal Synthesis of Analytic Controllers for Sampled-Data Systems via Genetic Programming},
+  author={Verdier, Cees F and Mazo, Manuel},
+  booktitle={2018 IEEE Conference on Decision and Control (CDC)},
+  pages={4896--4901},
+  year={2018},
+  organization={IEEE}
+}
+@inproceedings{ravanbakhsh2016robust,
+  title={Robust controller synthesis of switched systems using counterexample guided framework},
+  author={Ravanbakhsh, Hadi and Sankaranarayanan, Sriram},
+  booktitle={2016 international conference on embedded software (EMSOFT)},
+  pages={1--10},
+  year={2016},
+  organization={IEEE}
+}
