--- a/thesis.tex
+++ b/thesis.tex
@@ -38,6 +38,15 @@
 \usepackage{tabu}
 \usepackage{systeme} 
 \usepackage{mathtools}
+\usepackage{float}
+%\usepackage{algorithm}
+%\usepackage[noend]{algpseudocode}
+
+% Portuguese keywords:
+\SetKwInput{KwRes}{Resultado}%
+\SetKwIF{Se}{Senão se}{Senão}{se}{então}{senão se}{senão}{fim se}%
+\SetKwFor{Eq}{Enquanto}{faça}{fim enquanto}%
+\SetKwFunction{KwPr}{estimate\_maxPeak\_value}%
 
 \DeclarePairedDelimiter{\ceil}{\lceil}{\rceil}
 
